refactor: 리뷰 피드백 반영하여 CarTestFactory 도입 및 테스트 개선